--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,15 @@ section{
 .searchbox :focus{
     box-shadow: 0px 0px 8px 3px #4484c4 ;
 }
+
+.results{
+    display:flex;
+    flex-wrap:wrap; 
+    margin:0px -15px;
+
+}
+
+.results .reault{
+    width: 33.3333%;
+    padding:15px;
+}
