--- a/src/index.css
+++ b/src/index.css
@@ -59,11 +59,32 @@ section{
 .results{
     display:flex;
     flex-wrap:wrap; 
-    margin:0px -15px;
+    margin:0px 15px;
 
 }
 
-.results .reault{
+.results .result{
     width: 33.3333%;
+    min-width: 250px;
+
     padding:15px;
+display: flex; 
+flex-direction:column;
+cursor:pointer;
+
+}
+
+.results .result h3{
+    color:#FFF;
+    font-size: 2;
+    font-weight:600; 
+    padding: 10px; 
+    background: #445565;
+    flex: 1 1 100%; 
+    transition: 0.4s ease-out;
+}
+
+.results .results:hover h3{
+    background: #FFF;
+    color: #223343;
 }
