--- a/src/index.css
+++ b/src/index.css
@@ -57,21 +57,29 @@ section{
     box-shadow: 0px 0px 8px 3px #4484c4 ;
 }
 
+/*this is the original wrap of the flex*/
+
 .results{
     display:flex;
     flex-wrap:wrap; 
-    margin:0px 15px;
+    margin:0px -15px;
 
 }
 
-.results .result{
+/*the image sizing and display*/
+.results .result img{
+    display: block;
+    width:100%;
+}
+
+/**/
+.results .result {
     width: 33.3333%;
     min-width: 250px;
-
     padding:15px;
-display: flex; 
-flex-direction:column;
-cursor:pointer;
+    display: flex; 
+    flex-direction:column;
+    cursor:pointer;
 
 }
 
